kubernetes/apps/kube-system/reloader/app/netpol.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-reloader
  namespace: kube-system
spec:
  endpointSelector:
    matchLabels:
      app: reloader
  ingress:
    - fromEntities:
        - cluster
      toPorts:
        - ports:
            - port: "9090"
              protocol: TCP
  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
